KubernetesDocker/zaka-mongodb-pod-gcepd.yaml
apiVersion: v1
kind: Pod
metadata:
  name: zaka-mongodb
spec:
  volumes:
  - name: mongodb-data
    gcePersistentDisk:
      pdName: zaka-mongodb
      fsType: ext4
  containers:
  - image: mongo
    name: zaka-mongodb
    volumeMounts:
    - name: mongodb-data
      mountPath: /data/db
    ports:
    - containerPort: 27017
      protocol: TCP
